feat: add importInput

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <div class="hero circle draggable"></div>
       <div class="hero square draggable"></div>
       <button id='delete'>delete</button>
+      <input type="file" id='export' value="exportJSON">
+      <!-- <input type="file" id='export' value="exportJSON" onchange="readFile(this)"> -->
     </div>
     <div class="canvasContainer" id="canvasContainer">
     </div>
