feat: add export

--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
       <div class="hero circle draggable"></div>
       <div class="hero square draggable"></div>
       <button id='delete'>delete</button>
-      <input type="file" id='export' value="exportJSON">
+      <input type="file" id='export' value="importJSON">
       <!-- <input type="file" id='export' value="exportJSON" onchange="readFile(this)"> -->
+      <!-- <input type="file" id='export' value="exportJSON"> -->
+      <a href="" id="a">export JSON</a>
+
     </div>
     <div class="canvasContainer" id="canvasContainer">
     </div>
   </div>
 
+  <script>
+
+  </script>
   <script src="index.js"></script>
 </body>
 
