refactor: add comments, rename vars etc

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       <div class="hero circle draggable"></div>
       <div class="hero square draggable"></div>
       <button id='delete'>delete</button>
-      <input type="file" id='export' value="importJSON">
-      <!-- <input type="file" id='export' value="exportJSON" onchange="readFile(this)"> -->
-      <!-- <input type="file" id='export' value="exportJSON"> -->
-      <a href="" id="a">export JSON</a>
+      <label class="import__label" for="import">import JSON</label>
+      <input type="file" id='import' value="importJSON">
+      <a href="" id="export">export JSON</a>
 
     </div>
     <div class="canvasContainer" id="canvasContainer">
